cmake_minimum_required(VERSION 2.8.12)
project(qt_example)


add_subdirectory(qml-audio)
add_subdirectory(qml-combobox)
add_subdirectory(qml-login)
add_subdirectory(qml-numpad)

add_subdirectory(qt-signal-slot)
add_subdirectory(qt-translation)
add_subdirectory(qt-btn-group)
add_subdirectory(qtimer)

